--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,8 +21,11 @@
     />
     <title>Workout Booker</title>
   </head>
-  <body>
+  <body class="text-center">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div
+      id="root"
+      class="cover-container d-flex h-100 p-3 mx-auto flex-column"
+    ></div>
   </body>
 </html>
